--- a/test/src/main/java/uks/debuggen/party/PartyApp/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/party/PartyApp/classModel.yaml
@@ -29,10 +29,10 @@
   roles: 	partyAppBusinessLogic_builder 	partyAppBusinessLogic_service
 
 - partyAppBuilder: 	org.fulib.classmodel.Clazz
-  attributes: 	partyAppBuilder_model 	partyAppBuilder_eventStore
-  importList: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.party.events.*;"
-  imports: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.party.events.*;"
-  methods: 	partyAppBuilder_outdated 	partyAppBuilder_handleUserBuilt 	partyAppBuilder_handlePartyBuilt 	partyAppBuilder_handleItemBuilt 	partyAppBuilder_handleGuestBuilt 	partyAppBuilder_stripBrackets
+  attributes: 	partyAppBuilder_model 	partyAppBuilder_eventStore 	partyAppBuilder_loaderMap 	partyAppBuilder_groupStore
+  importList: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.party.events.*;" 	"import java.util.function.Function;"
+  imports: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.party.events.*;" 	"import java.util.function.Function;"
+  methods: 	partyAppBuilder_outdated 	partyAppBuilder_storeUserBuilt 	partyAppBuilder_loadUserBuilt 	partyAppBuilder_storePartyBuilt 	partyAppBuilder_loadPartyBuilt 	partyAppBuilder_storeItemBuilt 	partyAppBuilder_loadItemBuilt 	partyAppBuilder_storeGuestBuilt 	partyAppBuilder_loadGuestBuilt 	partyAppBuilder_load 	partyAppBuilder_initLoaderMap 	partyAppBuilder_addToGroup 	partyAppBuilder_stripBrackets
   model: 	c
   modified: 	false
   name: 	PartyAppBuilder
@@ -416,10 +416,10 @@ if (event.getId().equals(\"14:09\")) {
    handlerMap.put(CheckPasswordCommand.class, this::handleCheckPasswordCommand);
    handlerMap.put(GetPartyCommand.class, this::handleGetPartyCommand);
    handlerMap.put(BuildItemCommand.class, this::handleBuildItemCommand);
-   handlerMap.put(UserBuilt.class, builder::handleUserBuilt);
-   handlerMap.put(PartyBuilt.class, builder::handlePartyBuilt);
-   handlerMap.put(ItemBuilt.class, builder::handleItemBuilt);
-   handlerMap.put(GuestBuilt.class, builder::handleGuestBuilt);
+   handlerMap.put(UserBuilt.class, builder::storeUserBuilt);
+   handlerMap.put(PartyBuilt.class, builder::storePartyBuilt);
+   handlerMap.put(ItemBuilt.class, builder::storeItemBuilt);
+   handlerMap.put(GuestBuilt.class, builder::storeGuestBuilt);
 }
 "
   modified: 	false
@@ -496,6 +496,25 @@ if (event.getId().equals(\"14:09\")) {
   type: 	"LinkedHashMap<String, DataEvent>"
   typeSignature: 	"LinkedHashMap<String,DataEvent>"
 
+- partyAppBuilder_loaderMap: 	org.fulib.classmodel.Attribute
+  clazz: 	partyAppBuilder
+  id: 	PartyAppBuilder_loaderMap
+  modified: 	false
+  name: 	loaderMap
+  propertyStyle: 	Bean
+  type: 	"LinkedHashMap<Class, Function<Event, Object>>"
+  typeSignature: 	"LinkedHashMap<Class,Function<Event,Object>>"
+
+- partyAppBuilder_groupStore: 	org.fulib.classmodel.Attribute
+  clazz: 	partyAppBuilder
+  id: 	PartyAppBuilder_groupStore
+  initialization: 	"new LinkedHashMap<>()"
+  modified: 	false
+  name: 	groupStore
+  propertyStyle: 	Bean
+  type: 	"LinkedHashMap<String, LinkedHashMap<String, DataEvent>>"
+  typeSignature: 	"LinkedHashMap<String,LinkedHashMap<String,DataEvent>>"
+
 - partyAppBuilder_outdated: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	partyAppBuilder
@@ -521,89 +540,226 @@ if (event.getId().equals(\"14:09\")) {
   returnType: 	boolean
   signature: 	"class/PartyAppBuilder/method/outdated(DataEvent)"
 
-- partyAppBuilder_handleUserBuilt: 	org.fulib.classmodel.FMethod
+- partyAppBuilder_storeUserBuilt: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	partyAppBuilder
-  declaration: 	"public void handleUserBuilt(Event e)"
-  id: 	PartyAppBuilder_handleUserBuilt
+  declaration: 	"public void storeUserBuilt(Event e)"
+  id: 	PartyAppBuilder_storeUserBuilt
   methodBody: 	"UserBuilt event = (UserBuilt) e;
 if (outdated(event)) {
    return;
 }
+// please insert a no before fulib in the next line and insert addToGroup commands as necessary
+// fulib
+"
+  modified: 	false
+  modifiers: 	public
+  name: 	storeUserBuilt
+  paramsString: 	"Event e"
+  returnType: 	void
+  signature: 	"class/PartyAppBuilder/method/storeUserBuilt(Event)"
+
+- partyAppBuilder_loadUserBuilt: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	partyAppBuilder
+  declaration: 	"public User loadUserBuilt(Event e)"
+  id: 	PartyAppBuilder_loadUserBuilt
+  methodBody: 	"UserBuilt event = (UserBuilt) e;
 User object = model.getOrCreateUser(event.getBlockId());
 object.setName(event.getName());
 object.setEmail(event.getEmail());
 object.setPassword(event.getPassword());
+return object;
 "
   modified: 	false
   modifiers: 	public
-  name: 	handleUserBuilt
+  name: 	loadUserBuilt
   paramsString: 	"Event e"
-  returnType: 	void
-  signature: 	"class/PartyAppBuilder/method/handleUserBuilt(Event)"
+  returnType: 	User
+  signature: 	"class/PartyAppBuilder/method/loadUserBuilt(Event)"
 
-- partyAppBuilder_handlePartyBuilt: 	org.fulib.classmodel.FMethod
+- partyAppBuilder_storePartyBuilt: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	partyAppBuilder
-  declaration: 	"public void handlePartyBuilt(Event e)"
-  id: 	PartyAppBuilder_handlePartyBuilt
+  declaration: 	"public void storePartyBuilt(Event e)"
+  id: 	PartyAppBuilder_storePartyBuilt
   methodBody: 	"PartyBuilt event = (PartyBuilt) e;
 if (outdated(event)) {
    return;
 }
-Party object = model.getOrCreateParty(event.getBlockId());
-object.setName(event.getName());
-object.setLocation(event.getLocation());
+// please insert a no before fulib in the next line and insert addToGroup commands as necessary
+// fulib
 "
   modified: 	false
   modifiers: 	public
-  name: 	handlePartyBuilt
+  name: 	storePartyBuilt
   paramsString: 	"Event e"
   returnType: 	void
-  signature: 	"class/PartyAppBuilder/method/handlePartyBuilt(Event)"
+  signature: 	"class/PartyAppBuilder/method/storePartyBuilt(Event)"
 
-- partyAppBuilder_handleItemBuilt: 	org.fulib.classmodel.FMethod
+- partyAppBuilder_loadPartyBuilt: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	partyAppBuilder
-  declaration: 	"public void handleItemBuilt(Event e)"
-  id: 	PartyAppBuilder_handleItemBuilt
+  declaration: 	"public Party loadPartyBuilt(Event e)"
+  id: 	PartyAppBuilder_loadPartyBuilt
+  methodBody: 	"PartyBuilt event = (PartyBuilt) e;
+Party object = model.getOrCreateParty(event.getBlockId());
+object.setName(event.getName());
+object.setLocation(event.getLocation());
+return object;
+"
+  modified: 	false
+  modifiers: 	public
+  name: 	loadPartyBuilt
+  paramsString: 	"Event e"
+  returnType: 	Party
+  signature: 	"class/PartyAppBuilder/method/loadPartyBuilt(Event)"
+
+- partyAppBuilder_storeItemBuilt: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	partyAppBuilder
+  declaration: 	"public void storeItemBuilt(Event e)"
+  id: 	PartyAppBuilder_storeItemBuilt
   methodBody: 	"ItemBuilt event = (ItemBuilt) e;
 if (outdated(event)) {
    return;
 }
+// please insert a no before fulib in the next line and insert addToGroup commands as necessary
+// fulib
+"
+  modified: 	false
+  modifiers: 	public
+  name: 	storeItemBuilt
+  paramsString: 	"Event e"
+  returnType: 	void
+  signature: 	"class/PartyAppBuilder/method/storeItemBuilt(Event)"
+
+- partyAppBuilder_loadItemBuilt: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	partyAppBuilder
+  declaration: 	"public Item loadItemBuilt(Event e)"
+  id: 	PartyAppBuilder_loadItemBuilt
+  methodBody: 	"ItemBuilt event = (ItemBuilt) e;
 Item object = model.getOrCreateItem(event.getBlockId());
 object.setName(event.getName());
 object.setPrice(event.getPrice());
 object.setBuyer(model.getOrCreateGuest(event.getBuyer()));
 object.setParty(model.getOrCreateParty(event.getParty()));
+return object;
 "
   modified: 	false
   modifiers: 	public
-  name: 	handleItemBuilt
+  name: 	loadItemBuilt
   paramsString: 	"Event e"
-  returnType: 	void
-  signature: 	"class/PartyAppBuilder/method/handleItemBuilt(Event)"
+  returnType: 	Item
+  signature: 	"class/PartyAppBuilder/method/loadItemBuilt(Event)"
 
-- partyAppBuilder_handleGuestBuilt: 	org.fulib.classmodel.FMethod
+- partyAppBuilder_storeGuestBuilt: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	partyAppBuilder
-  declaration: 	"public void handleGuestBuilt(Event e)"
-  id: 	PartyAppBuilder_handleGuestBuilt
+  declaration: 	"public void storeGuestBuilt(Event e)"
+  id: 	PartyAppBuilder_storeGuestBuilt
   methodBody: 	"GuestBuilt event = (GuestBuilt) e;
 if (outdated(event)) {
    return;
 }
+// please insert a no before fulib in the next line and insert addToGroup commands as necessary
+// fulib
+"
+  modified: 	false
+  modifiers: 	public
+  name: 	storeGuestBuilt
+  paramsString: 	"Event e"
+  returnType: 	void
+  signature: 	"class/PartyAppBuilder/method/storeGuestBuilt(Event)"
+
+- partyAppBuilder_loadGuestBuilt: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	partyAppBuilder
+  declaration: 	"public Guest loadGuestBuilt(Event e)"
+  id: 	PartyAppBuilder_loadGuestBuilt
+  methodBody: 	"GuestBuilt event = (GuestBuilt) e;
 Guest object = model.getOrCreateGuest(event.getBlockId());
 object.setName(event.getName());
 object.setParty(model.getOrCreateParty(event.getParty()));
 object.setExpenses(event.getExpenses());
+return object;
 "
   modified: 	false
   modifiers: 	public
-  name: 	handleGuestBuilt
+  name: 	loadGuestBuilt
   paramsString: 	"Event e"
+  returnType: 	Guest
+  signature: 	"class/PartyAppBuilder/method/loadGuestBuilt(Event)"
+
+- partyAppBuilder_load: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	partyAppBuilder
+  declaration: 	"public Object load(String blockId)"
+  id: 	PartyAppBuilder_load
+  methodBody: 	"      DataEvent dataEvent = eventStore.get(blockId);
+      if (dataEvent == null) {
+         return null;
+      }
+
+      initLoaderMap();
+      Function<Event, Object> loader = loaderMap.get(dataEvent.getClass());
+      Object object = loader.apply(dataEvent);
+
+      LinkedHashMap<String, DataEvent> group = groupStore.computeIfAbsent(blockId, k -> new LinkedHashMap<>());
+      for (DataEvent element : group.values()) {
+         loader = loaderMap.get(element.getClass());
+         loader.apply(element);
+      }
+
+      return object;"
+  modified: 	false
+  modifiers: 	public
+  name: 	load
+  paramsString: 	"String blockId"
+  returnType: 	Object
+  signature: 	"class/PartyAppBuilder/method/load(String)"
+
+- partyAppBuilder_initLoaderMap: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	partyAppBuilder
+  declaration: 	"private void initLoaderMap()"
+  id: 	PartyAppBuilder_initLoaderMap
+  methodBody: 	"if (loaderMap == null) {
+   loaderMap = new LinkedHashMap<>();
+   loaderMap.put(UserBuilt.class, this::loadUserBuilt);
+   loaderMap.put(PartyBuilt.class, this::loadPartyBuilt);
+   loaderMap.put(ItemBuilt.class, this::loadItemBuilt);
+   loaderMap.put(GuestBuilt.class, this::loadGuestBuilt);
+}
+"
+  modified: 	false
+  modifiers: 	private
+  name: 	initLoaderMap
+  paramsString: 	""
   returnType: 	void
-  signature: 	"class/PartyAppBuilder/method/handleGuestBuilt(Event)"
+  signature: 	"class/PartyAppBuilder/method/initLoaderMap()"
+
+- partyAppBuilder_addToGroup: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	partyAppBuilder
+  declaration: 	"private void addToGroup(String groupId, String elementId)"
+  id: 	PartyAppBuilder_addToGroup
+  methodBody: 	"      DataEvent dataEvent = eventStore.get(elementId);
+
+      if (dataEvent == null) {
+         java.util.logging.Logger.getGlobal().severe(String.format(\"could not find element event %s for group %s \", elementId, groupId));
+         return;
+      }
+
+      LinkedHashMap<String, DataEvent> group = groupStore.computeIfAbsent(groupId, k -> new LinkedHashMap<>());
+      group.put(elementId, dataEvent);"
+  modified: 	false
+  modifiers: 	private
+  name: 	addToGroup
+  paramsString: 	"String groupId, String elementId"
+  returnType: 	void
+  signature: 	"class/PartyAppBuilder/method/addToGroup(String,String)"
 
 - partyAppBuilder_stripBrackets: 	org.fulib.classmodel.FMethod
   annotations: 	""
